# tdc-transformation-2021

./: README.md  alembic.ini  pyproject.toml
src/application/: employee_service.py
src/domain/: employee.py  employee_repository.py
src/infrastructure/pymongo/: __init__.py  employee_repository.py
src/infrastructure/sqlalchemy/: __init__.py  employee_repository.py
src/infrastructure/sqlalchemy/migration/: env.py
src/infrastructure/sqlalchemy/migration/versions/: a61c18782361_add_employee_table.py
src/infrastructure/sqlalchemy/model/: employee.py
src/presentation/: __init__.py  api.py
tests/application/: test_employee_service.py
tests/domain/: test_employee.py
