[tool.poetry]
name = "tdc-transformation-2021"
version = "0.1.0"
description = "An example of Hexagonal Architecture in Python for TDC Transformation 2021"
authors = ["Nicolas Zein <niczein@gmail.com>"]

[tool.poe.tasks]
runserver = { "shell" = "FLASK_APP=src.presentation.api FLASK_ENV=dev flask run --reload" }

[tool.poetry.dependencies]
python = "~3.8"
SQLAlchemy = "==1.4.22"
psycopg2-binary = "==2.9.1"
alembic = "==1.6.5"
pymongo = "==3.12.0"
Flask = "^2.0.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
